--- a/index.html
+++ b/index.html
@@ -5,15 +5,36 @@
   <!-- displays site properly based on user's device -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+
+  <link rel="stylesheet" href="dist/css/style.css" type="text/css">
   
   <title>simple landing page</title>
 
   
 </head>
 <body>
-
+<header class="header">
+  <nav class="flex flex-jc-sb flex-ai-c">
+  <a href="#" class="header__logo">
+    <img src="images/logo.svg" alt="easybank">
+  </a>
+  <a href="#" class="header__menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </a>
+  <div class="header__links">
+    <a href=" ">Home</a>
+    <a href=" ">About</a>
+    <a href="">Contact </a>
+    <a href="">Blog </a>
+    <a href="">Careers </a>
+  </div>
+  <a href="#" class="button header__cta" >Request invite</a>
+</nav>
+</header>
   
- 
+ <script src="dist/js/script.js"></script>
 </body>
 </html>
