--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="#" class="header__logo">
     <img src="images/logo.svg" alt="easybank">
   </a>
-  <a href="#" class="header__menu hide-for-desktop">
+  <a  id="btnHamburger" href="#" class="header__menu hide-for-desktop">
     <span></span>
     <span></span>
     <span></span>
