add the overlay and sync it with the hamburger menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
 <header class="header">
+  <div class="overlay" id="overlay"></div>
   <nav class="flex flex-jc-sb flex-ai-c">
+    
   <a href="#" class="header__logo">
     <img src="images/logo.svg" alt="easybank">
   </a>
