--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 <header class="header">
   <div class="overlay" id="overlay"></div>
-  <nav class=" container flex flex-jc-sb flex-ai-c">
+  <nav class=" flex flex-jc-sb flex-ai-c container container__pall">
     
   <a href="#" class="header__logo">
-    <img src="images/logo.svg" alt="easybank">
+    <img src="images/logo.svg" alt="logo">
   </a>
   <a  id="btnHamburger" href="#" class="header__menu hide-for-desktop">
     <span></span>
@@ -44,10 +44,16 @@
 </div>
 </header>
 
-<div class="container">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur corporis, quaerat officiis blanditiis officia saepe similique culpa deleniti rerum molestias assumenda quasi qui, voluptatibus consequuntur obcaecati eaque dolor voluptatem aperiam adipisci, maiores animi nisi. Sapiente excepturi quibusdam necessitatibus provident adipisci alias qui distinctio expedita, asperiores ut voluptate laudantium labore, doloribus tenetur, dolores amet eius quis? Veritatis rem, et voluptate consequatur voluptas dolorem expedita dolor tempora, eveniet facilis error deserunt id, maxime numquam. Ex natus rerum quibusdam animi est. Laborum enim in, ipsum minima animi, cum quod dolorem quibusdam reiciendis illo tempore, ab voluptatem culpa ea delectus! Ad excepturi suscipit consectetur.</p>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos accusamus adipisci pariatur libero nobis at aut reprehenderit, expedita deserunt, alias, voluptatem repudiandae. Possimus, corrupti numquam! Fuga magnam labore atque odit quisquam, excepturi minima itaque quae similique at sit ex sed optio doloribus perspiciatis qui dolorum esse consequuntur recusandae? Itaque maiores molestias, at necessitatibus unde, pariatur aliquam dolor nisi, fugiat laudantium perspiciatis aut amet vitae. Optio cumque sapiente exercitationem eaque facilis, cum doloremque hic recusandae at maiores. Deserunt quisquam totam eaque, magni eius quibusdam adipisci repellat distinctio, impedit provident incidunt assumenda beatae similique harum porro ex explicabo sit ducimus voluptates autem at! Consequuntur architecto ratione, porro corporis cumque nulla nam. Sit placeat eligendi dignissimos nulla, maiores, vitae quibusdam optio nesciunt earum a voluptas fuga quam eius dolore amet at incidunt laudantium. Magnam consequatur qui officiis voluptatibus excepturi! Atque consequuntur, et ut quam dolores eaque esse excepturi iusto quidem? Nulla eveniet ducimus iste ea asperiores est quaerat, id consectetur culpa molestiae, fugit excepturi iusto repellat fuga eum eligendi? Quibusdam, consequuntur inventore id, illum quidem impedit provident aliquam tempora omnis accusamus at, cupiditate voluptatibus iure! Consequuntur dolor, nostrum harum sed dignissimos illo corporis sint totam, tenetur ea veniam eligendi fugit quas earum asperiores!</p>
-</div>
+<section class="hero container">
+  <div class="hero__image"></div>
+  <div class="hero__text container__pall">
+    <h1>New way of web development</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, corrupti! Iusto temporibus aspernatur hic, veritatis aliquam magnam accusantium corrupti sequi?</p>
+  <a href="#" class="button hero__cta">Lorem, ipsum.</a>
+  </div>
+ 
+  
+</section>
   
  <script src="dist/js/script.js"></script>
 </body>
