add the features section

--- a/index.html
+++ b/index.html
@@ -48,11 +48,66 @@
   <div class="hero__image"></div>
   <div class="hero__text container__pall">
     <h1>New way of web development</h1>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, corrupti! Iusto temporibus aspernatur hic, veritatis aliquam magnam accusantium corrupti sequi?</p>
-  <a href="#" class="button hero__cta">Lorem, ipsum.</a>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, corrupti! Iusto temporibus aspernatur hic, veritatis aliquam magnam accusantium corrupti sequi?</p>
+    <a href="#" class="button hero__cta">Lorem, ipsum.</a>
   </div>
  
   
+</section>
+<section class="feature">
+
+  <div class="feature__content container container--pall">
+
+      <div class="feature__intro">
+          <h2>Why freesoft?</h2>
+          <p>
+           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid quo alias incidunt id veniam reiciendis tempore aliquam esse ullam, similique fugiat doloribus iste!
+          </p>
+      </div>
+  
+      <div class="feature__grid">
+        
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-online.svg" /></div>
+          <div class="feature__title">
+            Lorem, ipsum.
+          </div>
+          <div class="feature__description">
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta accusamus minus aut provident voluptas at magni harum perspiciatis laborum ullam?
+          </div>
+        </div>
+  
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-budgeting.svg" /></div>
+          <div class="feature__title">
+           Lorem, ipsum.
+          </div>
+          <div class="feature__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae mollitia sint suscipit cum officia, impedit deleniti soluta nam obcaecati tenetur?
+          </div>
+        </div>
+  
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-onboarding.svg" /></div>
+          <div class="feature__title">
+            Lorem, ipsum.
+          </div>
+          <div class="feature__description">
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium perspiciatis distinctio a quia corrupti dolores, fugit sunt porro alias fuga!          </div>
+        </div>
+  
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-api.svg" /></div>
+          <div class="feature__title">
+          Lorem, ipsum.
+          </div>
+          <div class="feature__description">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rem odio eos laboriosam dicta officiis sit, dolor deserunt tempora molestias!          </div>
+        </div>
+  
+      </div>
+  </div>
+
 </section>
   
  <script src="dist/js/script.js"></script>
