add markup for the latest section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,40 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rem odio eos labori
   </div>
 
 </section>
+<section class="latest container container--pall">
+  <div class="latest__caption">
+    <h1>
+      latest software
+    </h1>
+
+  </div>
+  <div class="latest__grid">
+    <div class="latest__item">
+      <img src="images/image-1.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <h4>Lorem ipsum dolor sit amet.</h4>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero optio laboriosam eaque praesentium eligendi, ad odio delectus perferendis dolores labore nobis.</p>
+    </div>
+    <div class="latest__item">
+      <img src="images/image-2.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <h4>Lorem ipsum dolor sit amet.</h4>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero optio laboriosam eaque praesentium eligendi, ad odio delectus perferendis dolores labore nobis.</p>
+    </div>
+    <div class="latest__item">
+      <img src="images/image-3.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <h4>Lorem ipsum dolor sit amet.</h4>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero optio laboriosam eaque praesentium eligendi, ad odio delectus perferendis dolores labore nobis.</p>
+    </div>
+    <div class="latest__item">
+      <img src="images/image-4.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <h4>Lorem ipsum dolor sit amet.</h4>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero optio laboriosam eaque praesentium eligendi, ad odio delectus perferendis dolores labore nobis.</p>
+    </div>
+  </div>
+</section>
   
  <script src="dist/js/script.js"></script>
 </body>
