git rid of the slahes before the image URL
looks like github pages wont load images with a slash before the URL

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="feature__grid">
         
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-online.svg" /></div>
+          <div class="feature__icon"><img src="images/icon-online.svg" /></div>
           <div class="feature__title">
             Lorem, ipsum.
           </div>
@@ -78,7 +78,7 @@
         </div>
   
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-budgeting.svg" /></div>
+          <div class="feature__icon"><img src="images/icon-budgeting.svg" /></div>
           <div class="feature__title">
            Lorem, ipsum.
           </div>
@@ -88,7 +88,7 @@
         </div>
   
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-onboarding.svg" /></div>
+          <div class="feature__icon"><img src="images/icon-onboarding.svg" /></div>
           <div class="feature__title">
             Lorem, ipsum.
           </div>
@@ -97,7 +97,7 @@ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium perspiciati
         </div>
   
         <div class="feature__item">
-          <div class="feature__icon"><img src="/images/icon-api.svg" /></div>
+          <div class="feature__icon"><img src="images/icon-api.svg" /></div>
           <div class="feature__title">
           Lorem, ipsum.
           </div>
@@ -148,7 +148,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rem odio eos labori
   <div class="container">
 
       <a class="footer__logo" href="#">
-          <img src="/images/logo.svg" />
+          <img src="images/logo.svg" />
         </a>
     
         <div class="footer__social">
